--- a/assets/sass/sections/_how-creators.scss
+++ b/assets/sass/sections/_how-creators.scss
@@ -6,31 +6,31 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: -100;
+  overflow: hidden;
 
   @media screen and (max-width: $bp-large) {
     width: 100%;
     margin: 0rem 2rem;
-    overflow: hidden;
   }
 
   @media screen and (max-width: $bp-form) {
     width: 95%;
     margin: 0rem auto;
-    overflow: hidden;
   }
 
-  @media only screen and (max-width: $bp-medium) {
-    height: 1010px;
-   }
-
-   @media only screen and (max-width: $bp-medium) {
+   @media only screen and (max-width: $bp-xsmall) {
     width: 100%;
+    margin: 0 0rem;
+    height: 1200px;
   }
 
   h2 {
     text-align: center;
     margin-top: 12rem;
+
+    @media only screen and (max-width: $bp-xsmall) {
+      margin-top: 0rem;
+     }
   }
 
   p {
@@ -62,6 +62,9 @@
     &-icon {
       width: 10.15rem;
       color: $color-icon-fill;
+      @media only screen and (max-width: $bp-xsmall) {
+        width: 8rem;
+       }
     }
 
     p {
@@ -101,6 +104,14 @@
         @media only screen and (max-width: $bp-xsmall) {
           display: flex;
           flex-direction: column;
+         }
+      }
+      img{
+
+        @media only screen and (max-width: $bp-xsmall) {
+          align-self: center;
+          height: 7rem;
+          width: 7rem;
          }
       }
     }
@@ -145,6 +156,8 @@
         margin-top: -1rem;
         @media only screen and (max-width: $bp-xsmall) {
           align-self: center;
+          height: 6rem;
+          width: 6rem;
          }
         
       }
@@ -178,9 +191,7 @@
       
       h3 {
         margin-top: 1rem;
-        @media only screen and (max-width: $bp-medium) {
-          margin-top: -10rem;
-        }
+
         @media only screen and (max-width: $bp-medium) {
           margin-top: 3rem;
         }
@@ -188,9 +199,7 @@
       }
       p {
         margin-top: -0.2rem;
-        @media only screen and (max-width: $bp-medium) {
-          margin-top: -9rem;
-        }
+
         @media only screen and (max-width: $bp-medium) {
           margin-top: 0rem;
         }
@@ -199,11 +208,14 @@
         align-self: center;
         margin-left: 4rem;
         margin-top: -1rem;
-        @media only screen and (max-width: $bp-medium) {
-          margin-top: -9rem;
-        }
+
         @media only screen and (max-width: $bp-medium) {
           margin-top: 0rem;
+          z-index: 900;
+        }
+        @media only screen and (max-width: $bp-small) {
+          height: 6rem;
+          width:6rem;
         }
       }
     }
